AI 제안 기능 수정: 항상 제안 표시되도록 개선

--- a/index.html
+++ b/index.html
@@ -566,8 +566,15 @@
             }
 
             // 문장 완성 제안
-            if (text.endsWith(' ') && suggestions.length === 0) {
-                suggestions.push('계속 입력하세요...');
+            if (text.endsWith(' ')) {
+                if (suggestions.length === 0) {
+                    suggestions.push('계속 입력하세요...', '심리학적 관점에서', '이것은 정신 건강과 관련이 있습니다');
+                }
+            }
+
+            // 제안이 없으면 기본 제안 추가
+            if (suggestions.length === 0 && text.length > 0) {
+                suggestions.push('심리학적 분석', '감정 조절 기법', '전문가 상담');
             }
 
             return suggestions.slice(0, 5);
@@ -581,14 +588,47 @@
                 return;
             }
 
-            // 기본 제안 표시
-            showBasicSuggestions(text);
+            // 제안 영역 표시
+            suggestionsDiv.style.display = 'block';
+            suggestionList.innerHTML = '<div style="padding: 10px; text-align: center; color: #666;">제안을 생성하는 중...</div>';
+
+            // 기본 제안 생성
+            const suggestions = generateBasicSuggestions(text);
+            
+            if (suggestions.length === 0) {
+                // 제안이 없을 때도 기본 제안 제공
+                const defaultSuggestions = getDefaultSuggestions(text);
+                displaySuggestions(defaultSuggestions);
+            } else {
+                displaySuggestions(suggestions);
+            }
+        }
+
+        // 기본 제안 (제안이 없을 때)
+        function getDefaultSuggestions(text) {
+            const textLower = text.toLowerCase();
+            const suggestions = [];
+
+            // 일반적인 심리학 제안
+            if (text.length > 0) {
+                suggestions.push('심리학적 관점에서 분석해보면', '이것은 정신 건강과 관련이 있습니다', '전문가의 도움을 받는 것이 좋습니다');
+            }
+
+            // 텍스트 길이에 따른 제안
+            if (text.length < 10) {
+                suggestions.push('더 자세히 설명해주세요', '구체적인 예시를 들어주세요', '어떤 감정을 느끼셨나요?');
+            } else {
+                suggestions.push('이 상황을 심리학적으로 해석하면', '이런 경우 대처 방법은', '감정 조절 기법을 시도해보세요');
+            }
+
+            return suggestions.slice(0, 3);
         }
 
         // 제안 표시
         function displaySuggestions(suggestions) {
             if (suggestions.length === 0) {
-                suggestionsDiv.style.display = 'none';
+                suggestionsDiv.style.display = 'block';
+                suggestionList.innerHTML = '<div style="padding: 10px; text-align: center; color: #999;">제안을 생성할 수 없습니다. 다른 텍스트를 입력해보세요.</div>';
                 return;
             }
 
