--- a/index.html
+++ b/index.html
@@ -501,23 +501,24 @@
             const words = text.trim().toLowerCase().split(/\s+/);
             const lastWord = words[words.length - 1];
             const textLower = text.toLowerCase();
+            const textLength = text.length;
             
-            // 심리학 관련 용어 완성
+            // 심리학 관련 용어 완성 (확장)
             const psychologyTerms = {
-                '인지': ['인지 행동 치료', '인지 행동 치료(CBT)', '인지 왜곡', '인지 재구성'],
-                '공감': ['공감적 대응', '공감하기', '공감 능력', '공감 표현'],
-                '감정': ['감정 조절', '감정 인식', '감정 표현', '감정 규제'],
-                '스트레스': ['스트레스 관리', '스트레스 완화', '스트레스 대처', '스트레스 반응'],
-                '마음챙김': ['마음챙김 명상', '마음챙김 연습', '마음챙김 기법', '마음챙김 훈련'],
-                '자존감': ['자존감 향상', '자존감 키우기', '자존감 회복', '자존감 형성'],
-                '불안': ['불안 관리', '불안 완화', '불안 대처', '불안장애'],
-                '우울': ['우울증', '우울감', '우울 증상', '우울 치료'],
-                '상담': ['상담 과정', '상담 기법', '상담 접근', '상담 효과'],
-                '치료': ['치료 효과', '치료 과정', '치료 기법', '치료 계획'],
-                '트라우마': ['트라우마 치료', '트라우마 회복', '트라우마 대처', '트라우마 치유'],
-                '애착': ['애착 이론', '애착 유형', '애착 관계', '애착 패턴'],
-                '자기효능감': ['자기효능감 향상', '자기효능감', '자기효능감 증진', '자기효능감 발달'],
-                '회복탄력성': ['회복탄력성', '회복탄력성 향상', '회복탄력성 기르기', '회복탄력성 발달']
+                '인지': ['인지 행동 치료(CBT)', '인지 왜곡', '인지 재구성', '인지 치료 기법', '인지 패턴'],
+                '공감': ['공감적 대응', '공감 능력', '공감 표현', '공감적 경청', '공감 훈련'],
+                '감정': ['감정 조절', '감정 인식', '감정 표현', '감정 규제', '감정 처리'],
+                '스트레스': ['스트레스 관리', '스트레스 완화', '스트레스 대처', '스트레스 반응', '스트레스 해소'],
+                '마음챙김': ['마음챙김 명상', '마음챙김 기법', '마음챙김 훈련', '마음챙김 실천', '마음챙김 호흡'],
+                '자존감': ['자존감 향상', '자존감 회복', '자존감 형성', '자존감 발달', '건강한 자존감'],
+                '불안': ['불안 관리', '불안 완화', '불안 대처', '불안장애', '불안 증상'],
+                '우울': ['우울증', '우울감', '우울 증상', '우울 치료', '우울 관리'],
+                '상담': ['상담 과정', '상담 기법', '상담 접근', '상담 효과', '상담 관계'],
+                '치료': ['치료 효과', '치료 과정', '치료 기법', '치료 계획', '치료 동맹'],
+                '트라우마': ['트라우마 치료', '트라우마 회복', '트라우마 대처', '트라우마 치유', '트라우마 처리'],
+                '애착': ['애착 이론', '애착 유형', '애착 관계', '애착 패턴', '안전 애착'],
+                '자기효능감': ['자기효능감 향상', '자기효능감 증진', '자기효능감 발달', '자기효능감 형성'],
+                '회복탄력성': ['회복탄력성 향상', '회복탄력성 기르기', '회복탄력성 발달', '회복탄력성 훈련']
             };
 
             // 단어 완성
@@ -531,53 +532,95 @@
                 }
             }
 
-            // 맥락 기반 제안 (문장 패턴 인식)
-            if (textLower.includes('불안') || textLower.includes('걱정')) {
-                suggestions.push('불안 완화 기법', '마음챙김 명상', '호흡 운동');
-            }
-            if (textLower.includes('스트레스') || textLower.includes('압박')) {
-                suggestions.push('스트레스 관리 전략', '이완 기법', '시간 관리');
-            }
-            if (textLower.includes('관계') || textLower.includes('사람')) {
-                suggestions.push('대인관계 기술', '경계 설정', '효과적 소통');
-            }
-            if (textLower.includes('자신') || textLower.includes('자존감')) {
-                suggestions.push('자존감 향상 방법', '자기 수용', '긍정적 자기 대화');
-            }
-            if (textLower.includes('감정') && textLower.includes('조절')) {
-                suggestions.push('감정 인식 훈련', '감정 표현 기법', '감정 규제 전략');
-            }
-            if (textLower.includes('치료') || textLower.includes('상담')) {
-                suggestions.push('치료 효과 평가', '상담 목표 설정', '치료 동맹');
-            }
-            if (textLower.includes('트라우마') || textLower.includes('과거')) {
-                suggestions.push('트라우마 치료 접근', '안전한 공간 만들기', '회복 과정');
-            }
+            // 고급 맥락 분석 기반 제안
+            analyzeContext(textLower, suggestions);
 
-            // 문장 완성 패턴
-            if (text.endsWith('은') || text.endsWith('는') || text.endsWith('이') || text.endsWith('가')) {
-                suggestions.push('중요한 개념입니다', '핵심 요소입니다', '주요 요인입니다');
-            }
-            if (text.endsWith('때') || text.endsWith('경우')) {
-                suggestions.push('대처 방법을 찾아야 합니다', '전문가의 도움을 받는 것이 좋습니다', '자기 돌봄이 필요합니다');
-            }
-            if (text.endsWith('수') || text.endsWith('할')) {
-                suggestions.push('있습니다', '가능합니다', '도움이 됩니다');
-            }
+            // 문장 완성 패턴 (더 정교하게)
+            completeSentence(text, suggestions);
 
-            // 문장 완성 제안
-            if (text.endsWith(' ')) {
-                if (suggestions.length === 0) {
-                    suggestions.push('계속 입력하세요...', '심리학적 관점에서', '이것은 정신 건강과 관련이 있습니다');
-                }
-            }
-
-            // 제안이 없으면 기본 제안 추가
-            if (suggestions.length === 0 && text.length > 0) {
-                suggestions.push('심리학적 분석', '감정 조절 기법', '전문가 상담');
+            // 제안이 없으면 지능형 기본 제안
+            if (suggestions.length === 0 && textLength > 0) {
+                addIntelligentDefaults(text, textLower, suggestions);
             }
 
             return suggestions.slice(0, 5);
+        }
+
+        // 맥락 분석 함수
+        function analyzeContext(textLower, suggestions) {
+            // 감정 관련 맥락
+            if (textLower.includes('불안') || textLower.includes('걱정') || textLower.includes('두려움')) {
+                suggestions.push('불안 완화를 위한 마음챙김 명상', '호흡 운동으로 불안 감소', '인지 재구성 기법');
+            }
+            if (textLower.includes('스트레스') || textLower.includes('압박') || textLower.includes('부담')) {
+                suggestions.push('스트레스 관리 전략 수립', '이완 기법 실천', '시간 관리와 우선순위 설정');
+            }
+            if (textLower.includes('관계') || textLower.includes('사람') || textLower.includes('친구')) {
+                suggestions.push('대인관계 기술 향상', '건강한 경계 설정', '효과적 소통 방법');
+            }
+            if (textLower.includes('자신') || textLower.includes('자존감') || textLower.includes('자신감')) {
+                suggestions.push('자존감 향상을 위한 자기 수용', '긍정적 자기 대화 실천', '자기 가치 인식');
+            }
+            if (textLower.includes('감정') && (textLower.includes('조절') || textLower.includes('관리'))) {
+                suggestions.push('감정 인식 훈련', '감정 표현 기법', '감정 규제 전략 개발');
+            }
+            if (textLower.includes('치료') || textLower.includes('상담') || textLower.includes('심리')) {
+                suggestions.push('치료 효과 평가 방법', '상담 목표 설정', '치료 동맹 형성');
+            }
+            if (textLower.includes('트라우마') || textLower.includes('과거') || textLower.includes('상처')) {
+                suggestions.push('트라우마 치료 접근법', '안전한 공간 만들기', '회복 과정 이해');
+            }
+            if (textLower.includes('우울') || textLower.includes('슬픔') || textLower.includes('절망')) {
+                suggestions.push('우울감 관리 기법', '인지 행동 치료 접근', '사회적 지지 활용');
+            }
+            if (textLower.includes('화') || textLower.includes('분노') || textLower.includes('짜증')) {
+                suggestions.push('분노 관리 기법', '감정 표현 방법', '건강한 분노 처리');
+            }
+            if (textLower.includes('수면') || textLower.includes('잠') || textLower.includes('불면')) {
+                suggestions.push('수면 위생 개선', '이완 기법으로 수면 개선', '불면증 관리');
+            }
+        }
+
+        // 문장 완성 함수
+        function completeSentence(text, suggestions) {
+            // 주어 + 서술어 패턴
+            if (text.endsWith('은') || text.endsWith('는') || text.endsWith('이') || text.endsWith('가')) {
+                suggestions.push('중요한 심리학적 개념입니다', '정신 건강의 핵심 요소입니다', '치료 과정에서 주요 요인입니다');
+            }
+            // 조건/상황 패턴
+            if (text.endsWith('때') || text.endsWith('경우') || text.endsWith('상황')) {
+                suggestions.push('대처 방법을 찾는 것이 중요합니다', '전문가의 도움을 받는 것이 좋습니다', '자기 돌봄이 필요합니다');
+            }
+            // 가능성 패턴
+            if (text.endsWith('수') || text.endsWith('할') || text.endsWith('가능')) {
+                suggestions.push('있습니다', '가능합니다', '도움이 됩니다');
+            }
+            // 질문 패턴
+            if (text.endsWith('?') || text.endsWith('까') || text.endsWith('인가')) {
+                suggestions.push('심리학적 관점에서 분석해보면', '이런 경우 전문가 상담을 권장합니다', '감정 조절 기법을 시도해볼 수 있습니다');
+            }
+            // 설명 패턴
+            if (text.endsWith('다') || text.endsWith('요') || text.endsWith('니다')) {
+                suggestions.push('이것은 정신 건강과 밀접한 관련이 있습니다', '심리학적 접근이 필요합니다', '치료 과정에서 중요한 요소입니다');
+            }
+        }
+
+        // 지능형 기본 제안
+        function addIntelligentDefaults(text, textLower, suggestions) {
+            // 텍스트 길이와 내용 기반
+            if (textLength < 10) {
+                suggestions.push('더 자세한 설명을 추가해주세요', '구체적인 예시를 들어주세요', '어떤 감정이나 상황인지 설명해주세요');
+            } else if (textLength < 30) {
+                suggestions.push('이 상황을 심리학적으로 해석하면', '이런 경우 대처 방법은', '감정 조절 기법을 시도해보세요');
+            } else {
+                suggestions.push('심리학적 관점에서 분석해보면', '이것은 정신 건강과 관련이 있습니다', '전문가의 도움을 받는 것이 좋습니다');
+            }
+
+            // 키워드 기반 기본 제안
+            const keywords = ['문제', '어려움', '힘들', '도움', '필요'];
+            if (keywords.some(kw => textLower.includes(kw))) {
+                suggestions.push('전문가 상담을 고려해보세요', '심리학적 지원을 받을 수 있습니다', '치료 과정을 시작하는 것이 좋습니다');
+            }
         }
 
         // AI 제안 받기
